<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="32dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-40dp">

        <TextView
            android:id="@+id/tv_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="Hi!"
            android:textColor="@color/color_700"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_sub_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_sub_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create your account"
            android:textColor="@color/color_700"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_login" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_name"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/ed_layout_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_sub_login"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name">

            <com.example.cafelabiru.CustomEditText
                android:id="@+id/ed_signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:inputType="text"
                android:paddingVertical="8dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:text="@string/tv_email"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_sub_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <com.example.cafelabiru.CustomEditText
                android:id="@+id/ed_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:inputType="textEmailAddress"
                android:paddingVertical="8dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_password"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_layout_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password">

            <com.example.cafelabiru.CustomEditText
                android:id="@+id/ed_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:inputType="textPassword"
                android:paddingVertical="8dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ed_layout_password"
            tools:layout_editor_absoluteX="32dp">

            <CheckBox
                android:id="@+id/termsCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/color_700"
                android:checked="false" />

            <TextView
                android:id="@+id/termsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Agree with "
                android:textSize="14sp" />

            <TextView
                android:id="@+id/termsLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms and Condition"
                android:textColor="#1A73E8"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="4dp"
            android:text="@string/tv_forgot_password"
            android:textColor="@color/color_700"
            app:layout_constraintEnd_toEndOf="@id/ed_layout_password"
            app:layout_constraintTop_toBottomOf="@id/ed_layout_password" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="240dp"
            android:layout_height="53dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bluebutton"
            android:text="@string/btn_signup"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

        <LinearLayout
            android:id="@+id/ll_signup_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_signup"
            app:layout_constraintVertical_bias="0.668">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/desc_login"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_redirect2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/desc_signup_here"
                android:textColor="@color/color_700" />
        </LinearLayout>


        <ImageButton
            android:id="@+id/btn_google"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="84dp"
            android:background="@null"
            android:contentDescription="Login with Google"
            android:scaleType="fitCenter"
            android:src="@drawable/googleicon"
            app:layout_constraintEnd_toEndOf="@+id/btn_signup"
            app:layout_constraintStart_toStartOf="@+id/btn_signup"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>